PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Add helper text when hitting a download with no working mirrors
pts-core: Various external dependency updates
pts-core: Add enable-repo sub-command for more easily enabling new OpenBenchmarking.org repos
phodevi: Fix display driver name potentially being reported inaccurate for some obscure graphics cards / driver configurations

Phoronix Test Suite 10.2.1
1 February 2021

pts-core: Add "InstallRequiresInternet" option for test profiles that is more narrow (install time only) than the existing "RequiresInternet"
pts-core: Add check-tests sub-command
pts-core: Fix possible crash on PDF output
pts-core: Various small fixes and tweaks
pts-core: Fix PHP8 + cURL download error
pts_Graph: A number of minor SVG standards compliance updates
phodevi: Log Transparent Huge Pages setting as part of system details
phodevi: Don't bother parsing the X.org log if it grows too big

Phoronix Test Suite 10.2.0
5 January 2021

pts-core: PHP8 detection improvements
pts-core: For estimated run time, avoid over-calculating time if test has no options but multiple outputs
pts-core: Updated (Open)Mandriva external dependencies
pts_Graph: Minor enhancements
phodevi: Add support for reporting ACPI Platform Profile and INT340x Workload Hint

Phoronix Test Suite 10.2.0 Milestone 3
21 December 2020

pts-core: Add debug-unhandled-dependencies option
pts-core: Default to 2.5% std dev threshold default on new installs
pts-core: BSD external dependency updates
pts-core: Various refinements to the text user interface
pts-core: When a test profile hits a failed download / broken mirror, report that URL to OpenBenchmarking.org
phodevi: Don't restore the Phodevi cache if the /etc/machine-id changed (or /etc/hostname as fallback)

Phoronix Test Suite 10.2.0 Milestone 2
6 December 2020

pts-core: Transition to new JSON-based data format for managing test install metadata while maintaining backwards compatibility with prior XML format